# async

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/async/: abstract_future.h  failure_handler.h  future.h  future_callback_object.h  future_context.h  future_object.h  future_observer.h  page_allocator.h  promise.h  status_t.h  when_all.h
include/async/detail/: future_callback_base.h  future_callback_object.h  future_object.h  future_object_base.h  future_observer.h  future_proxy_object.h  future_trait.h  tuple_trait_t.h  when_all_object.h
include/async/memory/: intrusive_ptr.h  make_shared.h  page_allocator.h  shared_ptr.h  shared_ptr_ctl_block.h  shared_ptr_obj_storage.h  weak_ptr.h
src/: shared_ptr_ctrl_block.cpp
tests/: catch.cpp  test_future.cpp  test_shared_ptr.cpp
